--- a/edusphere-frontend/src/app/course-list/course-list.component.css
+++ b/edusphere-frontend/src/app/course-list/course-list.component.css
@@ -44,12 +44,12 @@ h2 {
 button {
   padding: 10px 5px;
   font-size: 15px;
-  background-color: rgba(9, 9, 121, 1);
-  border: none;
+  background-color: transparent;
+  border: 1px dotted white;
   color: white;
   font-weight: bold;
   cursor: pointer;
-  margin-right: 20px;
+  margin-right: 10px;
   border-radius: 5px;
 }
 
@@ -62,7 +62,7 @@ a {
   text-decoration: none;
 }
 .course-list {
-  width: 67%;
+  width: 70%;
   text-align: center;
   margin: auto;
   padding: 30px;
@@ -73,6 +73,11 @@ a {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+.table{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .course-list-name{
     display: flex;
@@ -88,6 +93,8 @@ thead > tr > th {
   color: white;
   padding: 20px 70px;
   font-size: 18px;
+  color: rgba(9, 9, 121, 1);
+  font-weight: bold;
 }
 td {
   padding: 10px;
