--- a/edusphere-frontend/src/app/enrollment-list/enrollment-list.component.html
+++ b/edusphere-frontend/src/app/enrollment-list/enrollment-list.component.html
@@ -1,6 +1,19 @@
 
 
-<br>
+<div class="body">
+  <div class="navbar">
+    <p class="navbar-head">EduSphere</p>
+    <div class="navbar-buttons">
+      <button><a class="nav-anchor" href="instructors">Instructor</a></button>
+      <button><a class="nav-anchor" href="courses">Courses</a></button>
+      <button><a class="nav-anchor" href="students">Student</a></button>
+      <button><a class="nav-anchor" href="enrollment-list">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button><a class="nav-anchor" href="announcements">Announcements</a></button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
+    </div>
+  </div>
 <div class="enroll-list">
 <h2>Enrollment List</h2>
 <div *ngFor="let courseName of courseStudentMap.keys()">
@@ -10,6 +23,7 @@
        {{ studentName }}
     </li>
   </ul>
+</div>
 </div>
 </div>
 
