--- a/edusphere-frontend/src/app/enrollment/enrollment.component.html
+++ b/edusphere-frontend/src/app/enrollment/enrollment.component.html
@@ -1,5 +1,14 @@
 
-<br>
+<div class="body">
+  <div class="navbar">
+    <p class="navbar-head"><a href="home">EduSphere</a></p>
+    <div class="navbar-buttons">
+      <button><a class="nav-anchor" href="enroll">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments-list">Assignment</a></button>
+      <button><a class="nav-anchor" href="submissions-form">Submission</a></button>
+      <button><a class="nav-anchor" href="announcements-list">Announcement</a></button>
+    </div>
+  </div>
 <div class="enroll-form">
 <h2>Enroll in a Course</h2>
 <br>
@@ -18,12 +27,14 @@
   </select>
   <br>
   <br>
-  <button type="submit">Enroll</button>
+  <button type="submit" class="list-button">Enroll</button>
 </form>
+<!-- <button><a href="/assignments">Assignment</a></button>
+<button><a href="/announcements">Anouncement</a></button> -->
+</div>
 <br>
 <br>
-<button><a href="/assignments">Assignment</a></button>
-<button><a href="/announcements">Anouncement</a></button>
+<br>
 </div>
 
 
