--- a/edusphere-frontend/src/app/instructor-detail/instructor-detail.component.html
+++ b/edusphere-frontend/src/app/instructor-detail/instructor-detail.component.html
@@ -5,11 +5,11 @@
       <button><a class="nav-anchor" href="instructors">Instructor</a></button>
       <button><a class="nav-anchor" href="courses">Courses</a></button>
       <button><a class="nav-anchor" href="students">Student</a></button>
-      <button><a class="nav-anchor" href="#">Enrollment</a></button>
-      <button><a class="nav-anchor" href="#">Assignments</a></button>
-      <button><a class="nav-anchor" href="#">Submissions</a></button>
-      <button><a class="nav-anchor" href="#">Announcements</a></button>
-      <button><a class="nav-anchor" href="#">Departments</a></button>
+      <button><a class="nav-anchor" href="enrollment-list">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button><a class="nav-anchor" href="announcements">Announcements</a></button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
     </div>
   </div>
   <div class="instructor-detail">
