--- a/edusphere-frontend/src/app/instructor-form/instructor-form.component.css
+++ b/edusphere-frontend/src/app/instructor-form/instructor-form.component.css
@@ -69,12 +69,12 @@ select{
 button{
     padding:10px 20px;
     font-size: 15px;
-    background-color:rgba(9, 9, 121, 1);
-    border: none;
+    background-color: transparent;
+    border: 1px dotted white;
     color: white;
     font-weight: bold;
     cursor: pointer;
-    margin-right: 20px;
+    margin-right: 10px;
     border-radius: 5px;
 
 }
