--- a/edusphere-frontend/src/app/instructor-list/instructor-list.component.html
+++ b/edusphere-frontend/src/app/instructor-list/instructor-list.component.html
@@ -1,29 +1,30 @@
 
 <div class="body">
   <div class="navbar">
-    <p class="navbar-head">EduSphere</p>
+    <p class="navbar-head"><a href="home">EduSphere</a></p>
     <div class="navbar-buttons">
       <button><a class="nav-anchor" href="instructors">Instructor</a></button>
       <button><a class="nav-anchor" href="courses">Courses</a></button>
       <button><a class="nav-anchor" href="students">Student</a></button>
-      <button><a class="nav-anchor" href="#">Enrollment</a></button>
-      <button><a class="nav-anchor" href="#">Assignments</a></button>
-      <button><a class="nav-anchor" href="#">Submissions</a></button>
-      <button><a class="nav-anchor" href="#">Announcements</a></button>
-      <button><a class="nav-anchor" href="#">Departments</a></button>
+      <button><a class="nav-anchor" href="enrollment-list">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button><a class="nav-anchor" href="announcements">Announcements</a></button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
 
     </div>
   </div>
 <div class="instructor-list">
 <h2>Instructor List</h2>
 <br>
-<table class="table">
+<div class="table">
+<table >
   <thead>
     <tr>
       <th>Name</th>
       <th>Department</th>
       <th>Email</th>
-      <th>Contact Number</th>
+      <th>Contact</th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -42,6 +43,7 @@
     </tr>
   </tbody>
 </table>
+</div>
 </div>
 <br>
 <br>
