--- a/edusphere-frontend/src/app/student-detail/student-detail.component.html
+++ b/edusphere-frontend/src/app/student-detail/student-detail.component.html
@@ -1,3 +1,18 @@
+
+<div class="body">
+  <div class="navbar">
+    <p class="navbar-head">EduSphere</p>
+    <div class="navbar-buttons">
+      <button><a class="nav-anchor" href="instructors">Instructor</a></button>
+      <button><a class="nav-anchor" href="courses">Courses</a></button>
+      <button><a class="nav-anchor" href="students">Student</a></button>
+      <button><a class="nav-anchor" href="enrollment-list">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button><a class="nav-anchor" href="announcements">Announcements</a></button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
+    </div>
+  </div>
 <div class="student-details">
   <h1>Student Details</h1>
   <div *ngIf="student">
@@ -15,8 +30,9 @@
   </div>
   <br />
   <div class="text-right">
-    <button>
-      <a routerLink="/students" class="btn btn-primary">Back to List</a>
+    <button class="list-button">
+      <a routerLink="/students" >Back to List</a>
     </button>
   </div>
+</div>
 </div>
