--- a/edusphere-frontend/src/app/student-form/student-form.component.html
+++ b/edusphere-frontend/src/app/student-form/student-form.component.html
@@ -79,7 +79,7 @@
       </div>
       <br />
       <div class="text-right">
-        <button type="submit" class="btn btn-primary">{{ isEditMode ? "Edit Student" : "Register Student" }}</button>
+        <button type="submit" class="list-button">{{ isEditMode ? "Edit Student" : "Register Student" }}</button>
         <!-- <button type="button" class="btn btn-secondary" routerLink="/students/new">
           Cancel
         </button> -->
