--- a/edusphere-frontend/src/app/announcement-list/announcement-list.component.css
+++ b/edusphere-frontend/src/app/announcement-list/announcement-list.component.css
@@ -1,9 +1,8 @@
 
 
 
-
 .body {
-    height: 100vh;
+    height: fit-content;
     background: rgb(2, 0, 36);
     background: linear-gradient(
       90deg,
@@ -66,8 +65,53 @@
     text-decoration: none;
   }
 
-  .enroll-list{
-    width: 25%;
+  .announcement-form{
+    width: 20%;
+    margin: auto;
+    padding: 30px;
+    /* box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px; */
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: 5px solid white;
+}
+
+h2{
+    text-align: center;
+    margin: auto;
+    color: white;
+}
+label{
+    font-size: 17px;
+    color: white;
+}
+ input{
+    padding: 7px;
+    width: 100%;
+    margin: auto;
+ }
+select{
+    padding: 7px;
+    width: 100%;
+    margin: auto;
+}
+
+.list-button{
+    padding:12px 30px;
+    font-size: 15px;
+    background-color:rgba(9, 9, 121, 1);
+    border: none;
+    font-weight: bold;
+    border-radius: 50px;
+    border: 1px solid white;
+}
+
+textarea{
+    width: 100%;
+    height: 50px;
+}
+
+.announcement-list{
+    width: 70%;
     margin: auto;
     padding: 30px;
     font-weight: bold;
@@ -77,8 +121,16 @@
     color: white;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
-h2{
-    color: white;
-    text-align: left;
-}
 
+
+.grid-list{
+    
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    gap:20px;
+}
+.grid-list-child{
+    border: 1px dotted white;
+    padding:20px;
+}
