--- a/edusphere-frontend/src/app/announcement/announcement.component.html
+++ b/edusphere-frontend/src/app/announcement/announcement.component.html
@@ -1,36 +1,98 @@
-<h2>Create Announcement</h2>
+<div class="body">
+  <div class="navbar">
+    <p class="navbar-head">EduSphere</p>
+    <div class="navbar-buttons">
+      <button><a class="nav-anchor" href="instructors">Instructor</a></button>
+      <button><a class="nav-anchor" href="courses">Courses</a></button>
+      <button><a class="nav-anchor" href="students">Student</a></button>
+      <button>
+        <a class="nav-anchor" href="enrollment-list">Enrollment</a>
+      </button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button>
+        <a class="nav-anchor" href="announcements">Announcements</a>
+      </button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
+    </div>
+  </div>
+  <div class="announcement-form">
+    <h2>Create Announcement</h2>
+    <br>
+    <form (submit)="createAnnouncement()">
+      <label for="title">Title:</label>
+      <input
+        type="text"
+        id="title"
+        [(ngModel)]="newAnnouncement.title"
+        name="title"
+        required
+      />
+      <br>
+      <br>
+      <label for="description">Description:</label>
+      <textarea
+        id="description"
+        [(ngModel)]="newAnnouncement.description"
+        name="description"
+        required
+      ></textarea>
+      <br>
+      <br>
+      <label for="publish_date">Publish Date:</label>
+      <input
+        type="date"
+        id="publish_date"
+        [(ngModel)]="newAnnouncement.publish_date"
+        name="publish_date"
+        required
+      />
+      <br>
+      <br>
+      <label for="department">Department:</label>
+      <select
+        id="department"
+        [(ngModel)]="newAnnouncement.department"
+        name="department"
+        required
+      >
+        <option *ngFor="let department of departments" [value]="department.id">
+          {{ department.name }}
+        </option>
+      </select>
+      <br>
+      <br>
+      <label for="course">Course:</label>
+      <select
+        id="course"
+        [(ngModel)]="newAnnouncement.course"
+        name="course"
+        required
+      >
+        <option *ngFor="let course of courses" [value]="course.id">
+          {{ course.course_name }}
+        </option>
+      </select>
+      <br>
+      <br>
+      <button type="submit" class="list-button">Create Announcement</button>
+    </form>
+  </div>
 
-<form (submit)="createAnnouncement()">
-  <label for="title">Title:</label>
-  <input type="text" id="title" [(ngModel)]="newAnnouncement.title" name="title" required />
-
-  <label for="description">Description:</label>
-  <textarea id="description" [(ngModel)]="newAnnouncement.description" name="description" required></textarea>
-
-  <label for="publish_date">Publish Date:</label>
-  <input type="date" id="publish_date" [(ngModel)]="newAnnouncement.publish_date" name="publish_date" required />
-
-  <label for="department">Department:</label>
-  <select id="department" [(ngModel)]="newAnnouncement.department" name="department" required>
-    <option *ngFor="let department of departments" [value]="department.id">{{ department.name }}</option>
-  </select>
-
-  <label for="course">Course:</label>
-  <select id="course" [(ngModel)]="newAnnouncement.course" name="course" required>
-    <option *ngFor="let course of courses" [value]="course.id">{{ course.course_name }}</option>
-  </select>
-
-  <button type="submit">Create Announcement</button>
-</form>
-
-<h2>Announcements</h2>
-
-<ul>
-  <li *ngFor="let announcement of announcements">
-    <h3>{{ announcement.title }}</h3>
-    <p>{{ announcement.description }}</p>
-    <p>Publish Date: {{ announcement.publish_date }}</p>
-    <p>Department: {{ getDepartmentName(announcement.department) }}</p>
-    <p>Course: {{ getCourseName(announcement.course) }}</p>
-  </li>
-</ul>
+  <div class="announcement-list">
+    <h2>Announcements</h2>
+    <br>
+    <div class="grid-list">
+      <div class="grid-list-child" *ngFor="let announcement of announcements">
+        <h3>Title: {{ announcement.title }}</h3>
+        <h4>Description: {{ announcement.description }}</h4>
+        <h4>Publish Date: {{ announcement.publish_date }}</h4>
+        <p>Department: {{ getDepartmentName(announcement.department) }}</p>
+        <p>Course: {{ getCourseName(announcement.course) }}</p>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+</div>
