--- a/edusphere-frontend/src/app/course-form/course-form.component.html
+++ b/edusphere-frontend/src/app/course-form/course-form.component.html
@@ -1,16 +1,33 @@
-
+<div class="body">
+  <div class="navbar">
+    <p class="navbar-head">EduSphere</p>
+    <div class="navbar-buttons">
+      <button><a class="nav-anchor" href="instructors">Instructor</a></button>
+      <button><a class="nav-anchor" href="courses">Courses</a></button>
+      <button><a class="nav-anchor" href="students">Student</a></button>
+      <button><a class="nav-anchor" href="enrollment-list">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button><a class="nav-anchor" href="announcements">Announcements</a></button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
+    </div>
+  </div>
+<div class="course-form">
 <h2>{{ isEditMode ? 'Edit Course' : 'Add New Course' }}</h2>
 <form [formGroup]="courseForm" (ngSubmit)="saveCourse()">
   <!-- Course code input -->
+  <br>
   <div class="form-group">
     <label for="course_code">Course Code</label>
     <input type="text" id="course_code" class="form-control" formControlName="course_code">
   </div>
   <!-- Course name input -->
+  <br>
   <div class="form-group">
     <label for="course_name">Course Name</label>
     <input type="text" id="course_name" class="form-control" formControlName="course_name">
   </div>
+  <br>
   <!-- Department select -->
   <div class="form-group">
     <label for="department">Department</label>
@@ -18,19 +35,29 @@
       <option *ngFor="let department of departments" [value]="department.id">{{ department.name }}</option>
     </select>
   </div>
+  <br>
   <!-- Credits input -->
   <div class="form-group">
     <label for="credits">Credits</label>
     <input type="number" id="credits" class="form-control" formControlName="credits">
   </div>
+  <br>
   <!-- Description input -->
   <div class="form-group">
     <label for="description">Description</label>
+    <br>
     <textarea id="description" class="form-control" formControlName="description"></textarea>
   </div>
+  <br>
   <!-- Save button -->
   <div class="form-group">
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="list-button">Submit</button>
   </div>
 </form>
+</div>
+<br>
+<br>
+<br>
+<br>
+</div>
 
