--- a/edusphere-frontend/src/app/course-list/course-list.component.html
+++ b/edusphere-frontend/src/app/course-list/course-list.component.html
@@ -5,11 +5,11 @@
       <button><a class="nav-anchor" href="instructors">Instructor</a></button>
       <button><a class="nav-anchor" href="courses">Courses</a></button>
       <button><a class="nav-anchor" href="students">Student</a></button>
-      <button><a class="nav-anchor" href="#">Enrollment</a></button>
-      <button><a class="nav-anchor" href="#">Assignments</a></button>
-      <button><a class="nav-anchor" href="#">Submissions</a></button>
-      <button><a class="nav-anchor" href="#">Announcements</a></button>
-      <button><a class="nav-anchor" href="#">Departments</a></button>
+      <button><a class="nav-anchor" href="enrollment-list">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button><a class="nav-anchor" href="announcements">Announcements</a></button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
     </div>
   </div>
   <div class="course-list">
@@ -21,7 +21,8 @@
     </button>
     </div>
     <br />
-    <table class="table">
+    <div class="table">
+    <table >
       <thead>
         <tr>
           <th>Course Code</th>
@@ -59,7 +60,7 @@
         </tr>
       </tbody>
     </table>
-
+  </div>
       
   </div>
   <br>
