--- a/edusphere-frontend/src/app/student-list/student-list.component.html
+++ b/edusphere-frontend/src/app/student-list/student-list.component.html
@@ -1,20 +1,28 @@
-<!-- <div class="body">
+
+<div class="body">
   <div class="navbar">
     <p class="navbar-head">EduSphere</p>
     <div class="navbar-buttons">
-      <button><a href="instructors/new">Register</a></button>
-      <button><a href="instructors/login">Login</a></button>
+      <button><a class="nav-anchor" href="instructors">Instructor</a></button>
+      <button><a class="nav-anchor" href="courses">Courses</a></button>
+      <button><a class="nav-anchor" href="students">Student</a></button>
+      <button><a class="nav-anchor" href="enrollment-list">Enrollment</a></button>
+      <button><a class="nav-anchor" href="assignments">Assignments</a></button>
+      <button><a class="nav-anchor" href="submissions">Submissions</a></button>
+      <button><a class="nav-anchor" href="announcements">Announcements</a></button>
+      <button><a class="nav-anchor" href="departments">Departments</a></button>
     </div>
-  </div> -->
+  </div>
   <div class="student-list">
     <h1>Student List</h1>
-    <table class="table">
+    <div class="table">
+    <table>
       <thead>
         <tr>
           <th>Name</th>
           <th>Major</th>
           <th>Email</th>
-          <th>Contact Number</th>
+          <th>Contact</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -45,5 +53,9 @@
         </tr>
       </tbody>
     </table>
+    </div>
   </div>
-<!-- </div> -->
+  <br>
+  <br>
+  </div>
+
