readme file and login system for student and instructor added

--- a/edusphere-frontend/src/app/student-form/student-form.component.html
+++ b/edusphere-frontend/src/app/student-form/student-form.component.html
@@ -66,6 +66,18 @@
           required
         />
       </div>
+      <br>
+      <div class="form-group">
+        <label for="password">password:</label>
+        <br />
+        <input
+          type="text"
+          id="password"
+          class="form-control"
+          formControlName="password"
+          required
+        />
+      </div>
       <br />
       <div class="form-group">
         <label for="contactNumber">Contact Number:</label>
@@ -86,12 +98,9 @@
       </div>
     </form>
 
-    <br />
-    <!-- <div>
-      <button class="list-button">
-        <a routerLink="/enroll" class="btn btn-primary">Enrollment</a>
-      </button>
-    </div> -->
+    <!-- <br />
+    <p>If you are already register, click on login button.</p> -->
+      
   </div>
   <br>
   <br>
