--- a/edusphere-frontend/src/app/instructor-form/instructor-form.component.html
+++ b/edusphere-frontend/src/app/instructor-form/instructor-form.component.html
@@ -72,6 +72,18 @@
           class="form-control"
         />
       </div>
+      <br>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <br />
+        <input
+          type="text"
+          id="password"
+          formControlName="password"
+          class="form-control"
+          required
+        />
+      </div>
       <br />
       <div class="form-group">
         <label for="contactNumber">Contact Number</label>
@@ -84,7 +96,7 @@
         />
       </div>
       <br />
-      <button type="submit" class="btn btn-primary">
+      <button type="submit" class="list-button">
         {{ isEditMode ? "Update" : "Register" }} 
       </button>
     </form>
